--- a/DotnetMVCBaslangic/DotnetMVCBaslangic/appsettings.json
+++ b/DotnetMVCBaslangic/DotnetMVCBaslangic/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DotnetMVCBaslangicDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DotnetMVCBaslangicDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
