--- a/DotnetMVCBaslangic/DotnetMVCBaslangic/appsettings.json
+++ b/DotnetMVCBaslangic/DotnetMVCBaslangic/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DotnetMVCBaslangicDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DotnetMVCBaslangicDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DotnetMVCBaslangicDbConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DotnetMVCBaslangicDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
