web.ui configured for OOPTut.EntityFramework

--- a/OOPTut/src/OOPTut.Web.UI/OOPTut.Web.UI.csproj
+++ b/OOPTut/src/OOPTut.Web.UI/OOPTut.Web.UI.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
@@ -16,6 +17,10 @@
     <Folder Include="wwwroot\lib\" />
     <Folder Include="wwwroot\lib\" />
     <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OOPTut.EntityFramework\OOPTut.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
