--- a/OOPTut/src/OOPTut.Web.UI/appsettings.json
+++ b/OOPTut/src/OOPTut.Web.UI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OOPTutDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
