--- a/OOPTut/src/OOPTut.Application/OOPTut.Application.csproj
+++ b/OOPTut/src/OOPTut.Application/OOPTut.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OOPTut.Core\OOPTut.Core.csproj" />
+  </ItemGroup>
+
 </Project>
