--- a/OOPTut/src/OOPTut.Application/OOPTut.Application.csproj
+++ b/OOPTut/src/OOPTut.Application/OOPTut.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OOPTut.Core\OOPTut.Core.csproj" />
+    <ProjectReference Include="..\OOPTut.EntityFramework\OOPTut.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
