SharedBazaarList table created with notes

--- a/OOPTut/src/OOPTut.EntityFramework/OOPTut.EntityFramework.csproj
+++ b/OOPTut/src/OOPTut.EntityFramework/OOPTut.EntityFramework.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190616112213_CreateSharedBazaarListTable.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
