--- a/OOPTut/src/OOPTut.Web.UI/package.json
+++ b/OOPTut/src/OOPTut.Web.UI/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "jquery": "^3.4.0",
     "bootstrap": "4.3.1",
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.9"
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "jquery-ajax-unobtrusive": "^3.2.6"
   },
   "devDependencies": {
     "gulp": "4.0.1",
